# Library_wxWidgets

./: .gitignore  CMakeLists.txt  README.md
database/: mydatabase.db
headers/: app.h  database.h  mainFrame.h
source/: app.cpp  database.cpp  mainFrame.cpp
